--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3f00445",
+   "id": "041dea15",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f656d0",
+   "id": "00e21eee",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc21a164",
+   "id": "49ed50b1",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e269df03",
+   "id": "517961e8",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc9d6f7",
+   "id": "642acbd5",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba7f0a81",
+   "id": "bb92897d",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,17 +78,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b5dec5d",
+   "id": "2be90662",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
     "\n",
-    "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)"
+    "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)\n",
+    "- [Simple Neural Network Regression with Keras and JAX](https://jax.quantecon.org/keras.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae5becae",
+   "id": "15c86a27",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -100,7 +101,7 @@
   }
  ],
  "metadata": {
-  "date": 1731467713.3998013,
+  "date": 1732011573.1485543,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
