--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c2aedbd8",
+   "id": "17b09c8e",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2610a6b1",
+   "id": "067131fa",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9f38c93",
+   "id": "7003eefc",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b0208c",
+   "id": "50e84189",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe7260b",
+   "id": "4f0008e2",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76747e3",
+   "id": "d8106bdd",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d85517",
+   "id": "5ec47a2b",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d65679ec",
+   "id": "47324b38",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d42a7721",
+   "id": "0f996249",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55c6ccf",
+   "id": "654f2a61",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "353d12bb",
+   "id": "0d6c3790",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2d6d89",
+   "id": "8e8504a2",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cac0f85",
+   "id": "7aa1d2e9",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "877a1e69",
+   "id": "82c36d0c",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05affb6b",
+   "id": "1b3b6d45",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcb4e55",
+   "id": "e03deee2",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "331fdbdb",
+   "id": "dc3348b8",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c08814",
+   "id": "82144a6f",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f04ec9",
+   "id": "08285356",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10abeef4",
+   "id": "364db94f",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d565f935",
+   "id": "7366e8e6",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7245b324",
+   "id": "10b84961",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52243c2e",
+   "id": "f0ae2913",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "711b7380",
+   "id": "2146f8ee",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc420e12",
+   "id": "eeca9c53",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94759b9",
+   "id": "57a44283",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ad0e300",
+   "id": "a1a1e625",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90b23fc6",
+   "id": "29522f15",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaea0c31",
+   "id": "c5e1b380",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27fb244",
+   "id": "c404dc8b",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f158ed",
+   "id": "1a5e2c56",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc693448",
+   "id": "54a22bab",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a00e3d",
+   "id": "34fcbb97",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a74e9d",
+   "id": "c8a2f923",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c111e5b3",
+   "id": "ccd43296",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "946641a2",
+   "id": "c2f054a0",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b5f05df",
+   "id": "ce842ca4",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73f9cb8f",
+   "id": "a9e29773",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d4564e6",
+   "id": "940e92f9",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66d1f8ae",
+   "id": "6d64a39b",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93f02a97",
+   "id": "581557ac",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37c2ac18",
+   "id": "33b0fc89",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a72e6dbd",
+   "id": "cc19c8fa",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b7346b",
+   "id": "9aa3c9e9",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a86a1b",
+   "id": "368d015c",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "651ee855",
+   "id": "24ae67d2",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a39e9d",
+   "id": "a4cc957b",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b157f141",
+   "id": "369b3f4c",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4966e5e",
+   "id": "8a82b1ba",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf474fc",
+   "id": "d8a43981",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f090e07c",
+   "id": "97f96df6",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef0f2f66",
+   "id": "e151fb4a",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c88d3f76",
+   "id": "e027b5de",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee5a0b7",
+   "id": "8e647ef5",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94b7bb4",
+   "id": "66684ff4",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd43827",
+   "id": "df9697e6",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40fe3cbc",
+   "id": "2c448e78",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf2316a",
+   "id": "cc787eea",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b05d49a",
+   "id": "8ca1798c",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64261ab4",
+   "id": "90f98afa",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89332321",
+   "id": "f38c6629",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "367a176c",
+   "id": "7e750a4d",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5537050",
+   "id": "67cf6efe",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce4275f7",
+   "id": "7f3488dd",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511b77d8",
+   "id": "1b61ec33",
    "metadata": {
     "hide-output": false
    },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43b3669f",
+   "id": "48f3f4b4",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f3ca6ea",
+   "id": "af2a0551",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5fc763d",
+   "id": "5f294db2",
    "metadata": {
     "hide-output": false
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e001c1",
+   "id": "d9fa3dc0",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115587dd",
+   "id": "d379aaa6",
    "metadata": {
     "hide-output": false
    },
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1233b5f",
+   "id": "a5d01dda",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660820c8",
+   "id": "407772e3",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658b539d",
+   "id": "3628445e",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8854fbb",
+   "id": "5348950f",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec8b0f5",
+   "id": "a84287f2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b5b02e",
+   "id": "0faaaa25",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82360f8",
+   "id": "f41e3f95",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf6bffd2",
+   "id": "46542ed2",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a31d11c",
+   "id": "146378a8",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2d32583",
+   "id": "9ff343cc",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   }
  ],
  "metadata": {
-  "date": 1731467714.0504396,
+  "date": 1732011573.799403,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
