--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e422fe9",
+   "id": "cccf4049",
    "metadata": {},
    "source": [
     "# About\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88277044",
+   "id": "5d8a690e",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63704006",
+   "id": "ba20267a",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fd71a97",
+   "id": "1bfd96e6",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e0f35ee",
+   "id": "3faa63f5",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -143,7 +143,7 @@
   }
  ],
  "metadata": {
-  "date": 1731467713.0823154,
+  "date": 1732011572.841751,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
