--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37b7b396",
+   "id": "147b598f",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76173ff6",
+   "id": "4828e7e1",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122ed9fb",
+   "id": "245c9f96",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778fa51f",
+   "id": "a9ad0055",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020f7c0e",
+   "id": "ee52f741",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12911f1",
+   "id": "9608d0de",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa961b4",
+   "id": "e366ff8a",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "551debaf",
+   "id": "0a377f4a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4d88611",
+   "id": "237e04cb",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a75b136b",
+   "id": "27dfbb59",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f9dd47",
+   "id": "6de4fc73",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "369cdc0d",
+   "id": "76618a70",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01acc153",
+   "id": "d13c1178",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "260ebfb5",
+   "id": "3e869261",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baaee476",
+   "id": "653c0ccf",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f2667aa",
+   "id": "1f2fcc67",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed1db97",
+   "id": "a6ca1145",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab94761",
+   "id": "977045d6",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a2ebfb",
+   "id": "feb16ecf",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c470c811",
+   "id": "29f967a5",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8d70d09",
+   "id": "9049c4d8",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a7418d5",
+   "id": "267b8c78",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69168cfc",
+   "id": "4ebb6920",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae89f0c9",
+   "id": "a1f91fe7",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a9b40d",
+   "id": "f039e212",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f614cbb9",
+   "id": "b8b35f6d",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2040ce02",
+   "id": "ae4413dc",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df76dfd4",
+   "id": "a21eea3d",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84dfd46",
+   "id": "1933ddce",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4295cb4a",
+   "id": "b8066963",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d280dc",
+   "id": "f107c954",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f77f7ef",
+   "id": "7d6ce8b9",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94168526",
+   "id": "52d62ca3",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca15172",
+   "id": "3092b8e5",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c91e26",
+   "id": "ee4e1c30",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a48c7d0b",
+   "id": "803a0db6",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59553e55",
+   "id": "4e24b82c",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "025b2cbf",
+   "id": "879c9f3d",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84396e6b",
+   "id": "8bf8b816",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e15cf8e",
+   "id": "8718c7fc",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a76ea1",
+   "id": "cf7b3d52",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168ca3f9",
+   "id": "92638122",
    "metadata": {
     "hide-output": false
    },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a876b51b",
+   "id": "e84e8244",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10b6c2cb",
+   "id": "7455247b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808738db",
+   "id": "44e5586d",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00cc2a6c",
+   "id": "c1399670",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58d14f5",
+   "id": "268d0595",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbafdb98",
+   "id": "5aaa1b84",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e5bebd8",
+   "id": "4e006634",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d517c8",
+   "id": "5e62af57",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189d56f2",
+   "id": "a60d53ce",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f37518c0",
+   "id": "2421c035",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c174c082",
+   "id": "cd4cbb66",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1988066",
+   "id": "2d0c762e",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa11eaa",
+   "id": "8fbf6da9",
    "metadata": {
     "hide-output": false
    },
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f9c4c5",
+   "id": "cb271627",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   }
  ],
  "metadata": {
-  "date": 1731467713.1673262,
+  "date": 1732011572.921804,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
