--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a2541dd",
+   "id": "d6112a26",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "899cc10c",
+   "id": "24c082ac",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01977601",
+   "id": "c8ed2de2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788b786a",
+   "id": "d562c941",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68c22912",
+   "id": "c711a1a9",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30769f1b",
+   "id": "c81625b1",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c9efda",
+   "id": "a0ec68ec",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c00a839e",
+   "id": "489cf3fc",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab45b837",
+   "id": "33ea37c4",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55bae998",
+   "id": "f68c6cbe",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d80b60",
+   "id": "969c0ed2",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c114f9f",
+   "id": "91bbdaf2",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b554764b",
+   "id": "d249f70e",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4919354",
+   "id": "922176bc",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f689129",
+   "id": "b16df66c",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d4e6fa",
+   "id": "1c41087b",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef54fae",
+   "id": "6c834774",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b43975",
+   "id": "e5055dbc",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ac23d2",
+   "id": "97653f42",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96110ba4",
+   "id": "efd8c9a0",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da96bbd",
+   "id": "039859e7",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378cb0b8",
+   "id": "b74e7847",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a280d50",
+   "id": "3f3e15dd",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a8aaa75",
+   "id": "6ad214f0",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa06ed8a",
+   "id": "c5e89f57",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "876d0f99",
+   "id": "e3d2cfac",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec68be4",
+   "id": "2fd8a730",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7898f0b",
+   "id": "db637366",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9145a1d2",
+   "id": "d9c38c1b",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b429a544",
+   "id": "736e520c",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c2d865",
+   "id": "f52e7e65",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "939a290d",
+   "id": "d5988855",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07aff21",
+   "id": "c53d1e81",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f717e3",
+   "id": "8afeee29",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b705084c",
+   "id": "09a18d24",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e266b74",
+   "id": "c19af65c",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2062faf",
+   "id": "31fee5d3",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bccb3c7",
+   "id": "4df2529e",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aee0001",
+   "id": "87d89173",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "786d6d5c",
+   "id": "6f54619e",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f7d81a0",
+   "id": "4ec4b7a6",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2876f8",
+   "id": "370f4495",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d6cbc1",
+   "id": "c44d5301",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bef6b47",
+   "id": "1f91cc38",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "168ca735",
+   "id": "9222e49c",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -709,7 +709,7 @@
   }
  ],
  "metadata": {
-  "date": 1731467713.683352,
+  "date": 1732011573.5607462,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
